envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_https
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8043
    filter_chains:
      tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: "/etc/envoy/certs/app.crt"
              private_key:
                filename: "/etc/envoy/certs/app.key"
          alpn_protocols:
            - h2
      filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: http2
          stat_prefix: ingress_http
          route_config:
            name: app_route
            virtual_hosts:
            - name: app_service
              domains: ["test.com"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster_app
          http_filters:
          - name: envoy.router
  clusters:
  - name: cluster_app
    connect_timeout: 1s
    type: strict_dns
    load_assignment:
      cluster_name: cluster_app
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app
                port_value: 10000
